# gcp-environment-configuration

./: Makefile  README.md  pyproject.toml
src/gcpconfig/: app.py
src/utils/: api.py  logger.py  project.py
