[project]
name = "gcp-environment-configuration"
version = "1.0.0"
dependencies = [
  "google-cloud-storage"
]

[project.optional-dependencies]
dev = [
  "black"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
gcpconfig = "gcpconfig.app:main"
